Added public zip
